# AutoDescribe-Images

./: .gitignore  README.md  pyproject.toml  start-web.bat
config/: .env.example  config.yaml
src/image_describer/: config.py  main.py  ollama_client.py  openai_client.py  processor.py  vision_client.py  web_app.py
